--- a/css/custom.css
+++ b/css/custom.css
@@ -1,9 +1,63 @@
-.qty {
-  margin-left : 5px;
+body {
+  background-color: #f7f7f7;
+  background-image: url("https://www.transparenttextures.com/patterns/brick-wall.png");
+  overflow: hidden;
+}
+
+@media only screen and (max-width: 992px) {
+  body {
+    overflow-y: scroll;
+  }
 }
 
 .container {
-  padding: 20px !important;
+  width: 100%;
+}
+
+#cardbox {
+    border: 31px solid transparent;
+    height: 100vh;
+    width: 100%;
+    background-image: url("http://res.cloudinary.com/cspaveljb/image/upload/v1499110969/cork_w2tt25.jpg");
+    background-size: 500px;
+    border-image-source: url("http://res.cloudinary.com/cspaveljb/image/upload/v1499110958/corkborder_f8cm3g.png");
+    border-image-slice: 31 29;
+    border-image-width: 31px 29px; 
+    overflow-y: scroll;
+    overflow-x: hidden; 
+    position: absolute;
+    font-family: 'Handlee', cursive;
+}
+
+@media only screen and (max-width: 992px) {
+  #cardbox {
+    left: 0;
+  }
+}
+
+
+.box {
+  padding: 20px;
+  margin: 50px 5%;
+} 
+
+.border2 {
+  -webkit-box-shadow: -23px 6px 40px 6px rgba(36,6,6,1);
+  -moz-box-shadow: -23px 6px 40px 6px rgba(36,6,6,1);
+  box-shadow: -23px 6px 40px 6px rgba(36,6,6,1);
+}
+
+.border {
+  border-radius: 25px; 
+  background-color: hsl(0, 0%, 100%);
+  background-color: #f2f2f2;
+  -webkit-box-shadow: 0px 0px 20px -5px rgba(0,0,0,0.18);
+  -moz-box-shadow: 0px 0px 20px -5px rgba(0,0,0,0.18);
+  box-shadow: 0px 0px 20px -5px rgba(0,0,0,0.18);
+}
+
+.qty {
+  margin-left : 5px;
 }
 
 h1 {
@@ -19,8 +73,53 @@ h1 {
 }
 
 .quantity {
-  width : 30%;
+  width : 60%;
 }
+
+@media (max-width:1300px) and (min-width:992px) {
+  .quantity > input {
+    width: 40%;
+  } 
+}
+
+@media (max-width:816px) and (min-width:564px) {
+  .quantity > input {
+    width: 20%;
+  } 
+}
+
+
+@media (max-width:565px) {
+tr td {
+  display: block;
+}
+
+.quantity {
+  width: 50%;
+}
+
+.quantity > input {
+  width: 100%;
+} 
+}
+
+@media (max-width:401px) {
+  .quantity {
+    width: 50%;
+  }
+  
+  .quantity > input {
+    width: 30%;
+  } 
+  h2.totalPrice {
+    text-align: left;
+  }
+
+  button.cancel {
+    padding: 2px;
+  }
+  }
+
 
 .subtotal {
   text-align: right;
@@ -32,6 +131,162 @@ h1 {
   margin-left: -10px;
 }
 
-#addStock input {
-  margin-right: 20px;
+#newStock {
+  margin-top: 90px; 
+  font-family: 'Lato', sans-serif;
+}
+
+@media only screen and (max-width: 992px) {
+  #newStock {
+    margin-top: 50px;
+    margin-bottom: 50px;
+  }
+}
+
+.totalPrice {
+  text-align: right;
+}
+
+label {
+  margin-top: 5px;
+}
+
+.paper {
+  position: relative;
+  width: 90%;
+  background: #fafafa;
+  border-radius: 10px;
+  box-shadow: 0 2px 8px rgba(0,0,0,.3);
+  padding-left: 80px;
+}
+
+.paper:before {
+  content: ''; 
+  position: absolute;
+  top: 0; bottom: 0; left: 0; 
+  width: 60px;
+  background: radial-gradient(#575450 6px, transparent 7px) repeat-y;
+  background-size: 30px 30px;
+  border-right: 3px solid #D44147;
+  box-sizing: border-box; 
+}
+
+
+* {
+  box-sizing: border-box;
+}
+
+.container2 {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+
+.newinput {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  resize: vertical;
+}
+
+.newinput:focus {
+  outline-color : #a6a6a6 !important;
+}
+
+.newlabel {
+  padding: 12px 12px 12px 0;
+  display: inline-block;
+}
+
+input[type=submit] {
+  background-color: #4CAF50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  float: right;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.col-25 {
+  float: left;
+  width: 25%;
+  margin-top: 6px;
+}
+
+.col-75 {
+  float: left;
+  width: 75%;
+  margin-top: 6px;
+}
+
+/* Clear floats after the columns */
+.container2 .row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+@media screen and (max-width: 600px) {
+  .col-25, .col-75, .container2 input[type=submit] {
+    width: 100%;
+    margin-top: 0;
+  }
+}
+
+#add {
+  margin-top: 10px;
+  padding: 15px 0px;
+  background-color: #e6e6e6;
+  border: 1px solid #a6a6a6;
+  transition: all 0.8s ease 0s;
+}
+
+#add:hover {
+  background: #999999;
+  letter-spacing: 0.4px;
+  transition: all 0.8s ease 0s;
+  color: #fff;
+  }
+
+
+#cardbox::-webkit-scrollbar {
+  width: 12px;
+  height: 12px;
+  }
+    
+#cardbox::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 10px black;
+  border-radius: 5px;
+  }
+    
+#cardbox::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #651a1a; 
+  box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+  }
+
+.invisible_block {
+  padding: 50px;
+  }
+
+#new_product {
+  text-align: right;
+  font-size: 20px;
+  }
+    
+
+#to_board {
+  text-align: right;
+  padding-top: 15px;
+  font-size: 20px;
+}
+
+a {
+  color: black !important;
 }
